<resources>
    <string name="app_name">Meter Image Capturing</string>
    <string name="app_name_condensed">MiC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_scan">EditScanActivity</string>
    <string name="title_activity_manage_users">ManageUsersActivity</string>

    <string name="preference_file_key">com.slotmachine.ocr.mic.PREFERENCE_FILE_KEY</string>

    <string name="current_password_text">Current Password</string>
    <string name="new_password_text">New Password</string>
    <string name="reenter_password_text">Re-enter Password</string>
    <string name="save_changes_text">Save Changes</string>

    <string name="machine_id_text">Machine ID</string>

    <string name="dollar_sign_text">$</string>

    <string name="progressive_1_text">Progressive 1</string>
    <string name="progressive_2_text">Progressive 2</string>
    <string name="progressive_3_text">Progressive 3</string>
    <string name="progressive_4_text">Progressive 4</string>
    <string name="progressive_5_text">Progressive 5</string>
    <string name="progressive_6_text">Progressive 6</string>
    <string name="progressive_7_text">Progressive 7</string>
    <string name="progressive_8_text">Progressive 8</string>
    <string name="progressive_9_text">Progressive 9</string>
    <string name="progressive_10_text">Progressive 10</string>
    <string name="notes_text">Notes</string>

    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>

    <string name="autosort_label_text">Autosort Progressive Values</string>
    <string name="minimum_value_label">Min Value</string>
    <string name="sign_out_text">Sign Out</string>

    <string name="change_password_text">Change Password</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="delete_text">Delete</string>

    <string name="create_account_text">Create Account</string>
    <string name="switch_to_login_text">Already a member? Login</string>

    <string name="scan_text">Scan</string>
    <string name="submit_text">Submit</string>

    <string name="spinner_text">Spinner</string>

    <string name="one_hour_text">1 Hour</string>
    <string name="one_day_text">1 Day</string>
    <string name="one_week_text">1 Week</string>

    <string name="uncheck_user_text">Uncheck user</string>
    <string name="change_pin_text">Change Pin</string>

    <string name="mic_logo_content_description">MiC Logo Image</string>
    <string name="pds_logo_content_description">PDS Logo Image</string>

    <string name="disclaimer_header">Disclaimer</string>
    <string name="terms_and_conditions1">The information contained within the MIC application is for general informational purposes, and acts as a data gathering tool.  MIC or it’s distributors assume no responsibility for errors or omissions in the collected data.</string>
    <string name="terms_and_conditions2">In no way shall MIC or it’s distributors be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, arising out of, or in connection with the use of the application.  MIC reserves the right to make additions, deletions, or modifications to application at any time without prior notice.</string>
    <string name="terms_and_conditions3">By using the MIC application, the user assumes all responsibility to ensure the data is accurate and consistent with whatever Minimum Internal Control standards, or other regulatory conditions user may or may not be subject to.</string>

    <string name="completed_scans_nav_bar">Completed Scans</string>
    <string name="manage_users_nav_bar">Manage Users</string>
    <string name="settings_nav_bar">Settings</string>
    <string name="to_do_list_nav_bar">To Do List</string>
    <string name="title_activity_todo_list">TodoListActivity</string>

    <!--<string name="upload_file_empty_state_no_file_message">Upload a CSV file via\nthe web portal</string>-->
    <string name="upload_file_empty_state_no_file_message">No assigned scans. Get started by uploading a CSV file via the web portal</string>
    <string name="upload_file_empty_state_completed_message">Congratulations! All assigned scans have been completed</string>
    <string name="upload_file_empty_state_incomplete_message">No assigned scans have been completed</string>

    <string name="progressive_values_row_label">progressive values</string>
    <string name="progressive_values_row_label_singular">progressive value</string>
    <string name="location_text">Location</string>
    <string name="assigned_to_text">Assigned to</string>

    <string name="minimum_value_summary">Smallest value recognized by the OCR</string>

    <!-- Pin Code Lock Screen Strings -->
    <string name="lock_screen_title_pf">Input pin code</string>
    <string name="create_pin_title_pf">Create new pin code</string>
    <string name="enter_new_pin_title_pf">Enter new pin code</string>
    <string name="reenter_pin_title_pf">Re-enter pin code</string>
    <string name="wrong_pin_title_pf">Wrong pin. Please try again.</string>
    <string name="pin_mismatch_title_pf">Pins do not match</string>
    <string name="next_pf">Next</string>
    <string name="forgot_pf">Forgot?</string>

    <string name="text_0">0</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>

    <string name="fp_string">fp</string>

    <!-- ImageView Descriptions -->
    <string name="pin_code_image_view_description">pin code image view description</string>
    <string name="delete_button_description">delete button</string>
    <string name="fingerprint_button_description">fingerprint button</string>

    <string name="user_profile_icon_description">user profile icon</string>
    <string name="check_mark_description">check mark to denote currently selected user</string>
    <string name="title_activity_admin">AdminActivity</string>

    <string-array name="entries_list">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="entryValues_list">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="progressive_hint_entries">
        <item>Description</item>
        <item>Previous value</item>
    </string-array>

    <string-array name="progressive_hint_entries_values">
        <item>Description</item>
        <item>Previous value</item>
    </string-array>

    <string name="Search">Search</string>
    <string name="search_hint">Search by machine id</string>

    <string name="upload_file_sort_original">Original order</string>
    <string name="upload_file_sort_machine_id">Sort by machine id</string>
    <string name="upload_file_sort_location">Sort by location</string>
    <string name="notes_dialog_hint">Add machine notes here</string>
    <string name="machine_id_hint">Machine ID</string>
</resources>