<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:title="@string/Search"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sort_file_position"
            android:title="@string/upload_file_sort_original"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_machine_id"
            android:title="@string/upload_file_sort_machine_id"
            app:showAsAction="never" />

        <item
            android:id="@+id/sort_location"
            android:title="@string/upload_file_sort_location"
            app:showAsAction="never" />

    </group>

</menu>