<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_pf"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".PinCodeActivity">

    <ImageView
        android:id="@+id/pin_code_image_view"
        style="?pf_lock_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/PFLockScreenStyle"
        android:contentDescription="@string/pin_code_image_view_description"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/title_text_view"
            style="?pf_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:theme="@style/PFLockScreenTitleTextStyle" />

        <com.slotmachine.ocr.mic.PFCodeView
            android:id="@+id/code_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_1"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_1"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_2"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_2"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_3"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_3"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_4"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_4"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_5"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_5"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_6"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_6"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_7"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_7"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_8"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_8"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_9"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_9"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <!--<TextView
                    android:id="@+id/button_left"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/forgot_pf"
                    android:theme="@style/PFLockScreenHintTextStyle"
                    style="?pf_hint"/>-->
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_0"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/text_0"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/button_right"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text=""
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/button_delete"
                    style="?pf_delete_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:gravity="center"
                    android:text="@string/fp_string"
                    android:theme="@style/PFLockScreenDeleteButtonStyle"
                    android:visibility="visible"
                    android:contentDescription="@string/delete_button_description"/>

                <ImageView
                    android:id="@+id/button_finger_print"
                    style="?pf_fingerprint_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:gravity="center"
                    android:text="@string/fp_string"
                    android:theme="@style/PFLockScreenFingerPrintButtonStyle"
                    android:visibility="gone"
                    android:contentDescription="@string/fingerprint_button_description"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_pf"
            android:visibility="gone"
            android:theme="@style/PFLockScreenNextTextStyle"
            style="?pf_next"/>

    </LinearLayout>

</RelativeLayout>